CLI/Animation: Fixed failure to overwrite existing animation sequence.

Exporting animation sequence from the command line no longer fails
when frames already exist in the target directory.

BUG:499568